<resources>
    <string name="app_name">Farmers Market</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home2">Home2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sell_quote_1">Sell with us</string>
    <string name="sell_quote">Sell your products on the largest farmer marketplace in the country.Get insights from a dedicated account manager and team of agro experts</string>
    <string name="veg_fruit">Fruits and Vegies</string>
    <string name="staples">Staples</string>

    <string-array name="Staple">
        <item>Wheat,Soji,Soya</item>
        <item>Rice and Rice Product</item>
        <item>Pulses</item>
        <item>Spices</item>
        <item>Salt,Sugar and Jaggery</item>
    </string-array>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>