<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sell"
    android:background="@drawable/bgimg">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#789F6F"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30sp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="100sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell_quote_1"
            android:textColor="#425846"
            android:textSize="50sp" />

        <TextView
            android:layout_width="293dp"
            android:layout_height="154dp"
            android:text="@string/sell_quote"
            android:textColor="#ffff"
            android:textSize="20sp" />

    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="250sp"
        android:layout_below="@+id/linear_layout"
        android:layout_marginTop="150sp"
        android:rowCount="1"
        android:columnCount="2">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vegfru"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veg_fruit"
                    android:textSize="17sp"
                    android:textColor="#789f6f"
                    android:layout_below="@id/img1"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="20sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/staple"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/staples"
                    android:textSize="17sp"
                    android:textColor="#789f6f"
                    android:layout_below="@+id/img2"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>